# napari-workflow-inspector

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_workflow_inspector/: __init__.py  _dock_widget.py
src/napari_workflow_inspector/_tests/: test_dock_widget.py
