[metadata]
name = napari-workflow-inspector
version = 0.1.2
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-workflow-inspector
license = BSD-3-Clause
description = Inspect relationships between napari-plugins in active workflows
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-workflow-inspector/issues
    Documentation = https://github.com/haesleinhuepf/napari-workflow-inspector#README.md
    Source Code = https://github.com/haesleinhuepf/napari-workflow-inspector
    User Support = https://github.com/haesleinhuepf/napari-workflow-inspector/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari-tools-menu
    python-igraph
    matplotlib
    napari-workflows

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-workflow-inspector = napari_workflow_inspector
